[gd_scene load_steps=16 format=3 uid="uid://i7y4atl4hscv"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_b4csx"]
[ext_resource type="AudioStream" uid="uid://b0bnt543nqq4p" path="res://assets/audio/sfx/cloth3.ogg" id="2_4mnt8"]
[ext_resource type="Texture2D" uid="uid://d2mph5526dl6u" path="res://assets/textures/light_03.png" id="2_ireuh"]
[ext_resource type="AudioStream" uid="uid://clc2xllhyhd0n" path="res://assets/audio/sfx/footstep-grass.ogg" id="3_2s186"]
[ext_resource type="Texture2D" uid="uid://bvl2cbeorwrgi" path="res://assets/sprites/star.png" id="3_m8og5"]
[ext_resource type="AudioStream" uid="uid://cscoriv3mmcrr" path="res://assets/audio/sfx/landing.ogg" id="4_3rbl3"]
[ext_resource type="AudioStream" uid="uid://w6dr1iefi65e" path="res://assets/audio/sfx/roll.ogg" id="5_0l0ud"]
[ext_resource type="AudioStream" uid="uid://clgu3fbmwtjmq" path="res://assets/audio/sfx/wind-falling.ogg" id="7_g28m1"]

[sub_resource type="Animation" id="Animation_r0f5v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%POV_Camera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%POV_Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%Neck/..:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_p2lp1"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%POV_Camera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0523599, 0, -0.0174533), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%POV_Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_cy2hv"]
resource_name = "land"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%POV_Camera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%POV_Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_rllm5"]
resource_name = "roll"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%POV_Camera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 0.366021, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-3.14159, 0, 0), Vector3(-6.28319, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%POV_Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i5wx3"]
_data = {
"RESET": SubResource("Animation_r0f5v"),
"jump": SubResource("Animation_p2lp1"),
"land": SubResource("Animation_cy2hv"),
"roll": SubResource("Animation_rllm5")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wpi1k"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2a6in"]
height = 1.2

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_b4csx")
jump_SFX = ExtResource("2_4mnt8")
footstep_SFX = ExtResource("3_2s186")
landing_SFX = ExtResource("4_3rbl3")
roll_SFX = ExtResource("5_0l0ud")

[node name="Neck" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Head" type="Node3D" parent="Neck"]
unique_name_in_owner = true

[node name="Eyes" type="Node3D" parent="Neck/Head"]
unique_name_in_owner = true

[node name="POV_Camera" type="Camera3D" parent="Neck/Head/Eyes"]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Neck/Head/Eyes"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_i5wx3")
}

[node name="SpotLight3D" type="SpotLight3D" parent="Neck/Head/Eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.07599, 0.250278)
light_color = Color(0.870588, 0.796078, 0.701961, 1)
light_energy = 3.0
spot_range = 16.908
spot_angle = 47.17
spot_angle_attenuation = 3.03143

[node name="Blob_Shadow" type="Decal" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
size = Vector3(1, 10, 1)
texture_albedo = ExtResource("2_ireuh")
modulate = Color(0.686275, 0.321569, 0, 0.839216)
normal_fade = 0.25

[node name="Standing_Collision_Shape" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_wpi1k")

[node name="Crouching_Collision_Shape" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.647547, 0)
shape = SubResource("CapsuleShape3D_2a6in")
disabled = true

[node name="Height_Check" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, 2, 0)

[node name="Floor_Check" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, -10, 0)

[node name="Ledge_Check" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
target_position = Vector3(0, 0, -1)

[node name="Slide_Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="Coyote_Time" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="UI" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Wall_Jump_1" type="TextureRect" parent="UI"]
modulate = Color(0.839216, 0.623529, 0.160784, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_bottom = 67.0
grow_horizontal = 0
texture = ExtResource("3_m8og5")
expand_mode = 1

[node name="Wall_Jump_2" type="TextureRect" parent="UI"]
modulate = Color(0.839216, 0.623529, 0.160784, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_top = 71.0
offset_bottom = 138.0
grow_horizontal = 0
texture = ExtResource("3_m8og5")
expand_mode = 1

[node name="Wall_Jump_3" type="TextureRect" parent="UI"]
modulate = Color(0.839216, 0.623529, 0.160784, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_top = 142.0
offset_bottom = 209.0
grow_horizontal = 0
texture = ExtResource("3_m8og5")
expand_mode = 1

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 61.0
offset_top = 41.0
offset_right = 101.0
offset_bottom = 64.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3

[node name="WindPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_g28m1")
volume_db = -15.053
bus = &"SFX"

[connection signal="timeout" from="Slide_Timer" to="." method="_on_slide_timer_timeout"]
